Added slide out menu. Made partials folder.

--- a/www/index.html
+++ b/www/index.html
@@ -20,14 +20,19 @@
         <script src="js/directives.js"></script>
         <script src="js/filters.js"></script>
 
-    <!--Slide out menu stuff-->
+    <!--Slide out menu stuff
         <script src="bower_components/angular-menu-slideout/angular-menu-slideout.js"></script>
         <script src="bower_components/angular-touch/angular-touch.js"></script>
         <link rel="stylesheet" href="bower_components/angular-menu-slideout/angular-menu-slideout.css">
-        <link rel="stylesheet" href="bower_components/angular-menu-slideout/slide-style.css">
+        <link rel="stylesheet" href="bower_components/angular-menu-slideout/slide-style.css">-->
+        
+    <!--Angular Snap-->
+        <script src="bower_components/angular-snap/angular-snap.js"></script>
+        <script src="bower_components/snapjs/snap.js"></script>
+        <link rel="stylesheet" href="bower_components/angular-snap/angular-snap.css">
 
     <!--Dan's css stuff-->
-        <link rel="stylesheet" href="css/style.css">
+        <!--<link rel="stylesheet" href="css/style.css">-->
 
     <!--Waiting till Intel plugins are ready-->
         <script>
@@ -38,7 +43,7 @@
         </script>
     </head>
 
-    <body>
+    <body style="background-color: #50a2f0">
         <div ui-view></div>
     </body>
 </html>
