--- a/www/tpl/explore.html
+++ b/www/tpl/explore.html
@@ -1,15 +1,7 @@
-<div>
-    <input type="button" value="Start Watch" ng-click="button()">
-</div>
-<div class="arView" ng-show="phoneUp">
-    <h1>AR View</h1>
-    <p>x: {{currAcc.x}}</p>
-    <p>y: {{currAcc.y}}</p>
-    <p>z: {{currAcc.z}}</p>
-</div>
-<div class="mapView" ng-hide="phoneUp">
-    <h1>Map View</h1>
-    <p>x: {{currAcc.x}}</p>
-    <p>y: {{currAcc.y}}</p>
-    <p>z: {{currAcc.z}}</p>
+<link rel="stylesheet" href="../css/explore.css">
+<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" type="text/css">
+
+<div class="buttoncontainer">
+    <img src="../img/searchbutton.png"><img src="../img/camerabutton.png"><br/>
+    <img src="../img/compassbutton.png"><br/>
 </div>
