Added maps. Separated designer and coder templates.

--- a/www/tpl/body.html
+++ b/www/tpl/body.html
@@ -1,9 +1,12 @@
+<link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="../css/tour.css">
+<link rel="stylesheet" href="../css/explore.css">
 <div>
     <div class="textcontainer">
         <p>
-            <img src="img/artour.png" alt="title" width="1500">
-            <a ui-sref="tours">TOUR</a><br/>
-            <a ui-sref="explore">EXPLORE</a>
+            <img src="../img/artour.png" alt="title" width="1500">
+            <a href="tour.html">TOUR</a><br/>
+            <a href="explore.html">EXPLORE</a>
             <div id="rectangle"></div>
         </p>
     </div>  
