--- a/www/index.html
+++ b/www/index.html
@@ -29,8 +29,10 @@
         <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyDb6dcBwQGLa1gjxKh0ki1W1qMtcZYsCGA" type="text/javascript"></script>
         
     <!--Dan's css stuff-->
-        <!--<link rel="stylesheet" href="css/style.css">-->
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" type="text/css">
 
+        
     <!--Loggin when Intel plugins are ready-->
         <script>
             var onDeviceReady=function(){
