Fixed bugs after adding Dan's css

--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 
     <!--IntelXDK AR stuff: COMMENT OUT IF YOU ARE GETTING ERRORS IN LIVEPREVIEW-->
-        <!--<script src='intelxdk.js'></script>-->
+        <script src='intelxdk.js'></script>
 
     <!--Angular stuff-->
         <script src="vendor/angular/angular.js"></script>
