Added explore page css as well as art profile

--- a/www/index.html
+++ b/www/index.html
@@ -59,8 +59,6 @@
     </head>
 
     <body>
-        <div ui-view>
-            
-        </div>
+        <div ui-view style="height:100%;width:100%"></div>
     </body>
 </html>
