--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
     <!--Angular stuff-->
         <script src="vendor/angular/angular.js"></script>
         <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
+        <script src="vendor/angular-sanitize/angular-sanitize.js"></script>
 
         <script src="js/app.js"></script>
         <script src="js/controllers.js"></script>
