Part way to clean out

--- a/www/index.html
+++ b/www/index.html
@@ -20,8 +20,8 @@
     <script src='intelxdk.js'></script>
     <script src='cordova.js'></script>
     <!-- ionic/angularjs js -->
-<!--    <script src="lib/ionic/js/ionic.bundle.js"></script>-->
-    <script src="lib/ionic/js/ionic.bundle.min.js"></script>
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
+<!--    <script src="lib/ionic/js/ionic.bundle.min.js"></script>-->
 
     <!--Angular stuff-->
     <script src="lib/angular-sanitize/angular-sanitize.js"></script>
@@ -30,7 +30,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
-    <script src="js/filters.js"></script>
+<!--    <script src="js/filters.js"></script>-->
     
     <!--    Angular Snap -->
     <script src="lib/angular-snap/angular-snap.js"></script>
