cleaning and overall structure changes (json files into json) Controllers, Services in separate files

--- a/www/index.html
+++ b/www/index.html
@@ -25,10 +25,14 @@
     <script src="lib/angular-sanitize/angular-sanitize.js"></script>
 
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
-    <script src="js/directives.js"></script>
-    <script src="js/filters.js"></script>
+    <script src="js/Controllers/controllers.js"></script>
+    <script src="js/Controllers/exploreCtrl.js"></script>
+    <script src="js/Controllers/searchCtrl.js"></script>
+    <script src="js/Controllers/tourListCtrl.js"></script>
+    <script src="js/Services/services.js"></script>
+    <script src="js/Services/locationService.js"></script>
+    <script src="js/Directives/directives.js"></script>
+    <script src="js/Filters/filters.js"></script>
     
     <!--    Angular Snap-->
     <script src="lib/angular-snap/angular-snap.js"></script>
