Artwork for specific tour now available in imslide.

--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,10 @@
     <script src="lib/snapjs/snap.js"></script>
     <link rel="stylesheet" href="lib/angular-snap/angular-snap.css">
 -->
+    
+    <!--    Restangular Stuff-->
+    <script src="lib/lodash/dist/lodash.js"></script>
+    <script src="lib/restangular/dist/restangular.js"></script>
 
     <!--Google Maps-->
     <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyDb6dcBwQGLa1gjxKh0ki1W1qMtcZYsCGA" type="text/javascript"></script>
