Restangularized artwork. Filters artwork images by tour.

--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,8 @@
 -->
     
     <!--    Restangular Stuff-->
+    <script src="modules/dbServices.js"></script>
+    <script src="modules/sha512.js"></script>
     <script src="lib/lodash/dist/lodash.js"></script>
     <script src="lib/restangular/dist/restangular.js"></script>
 
