--- a/www/index.html
+++ b/www/index.html
@@ -49,6 +49,11 @@
 </head>
 
 <body ng-app="publicArtApp">
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="ar_js/sampleIndices.js"></script>
+    <script type="text/javascript" src="ar_js/loadingPoisFromApplicationModel.js"></script>
+    <script type="text/javascript" src="ar_js/index.js"></script>
+    
     <ion-side-menus delegate-handle="main-menu">
         <ion-side-menu-content drag-content="true">
             <ion-nav-bar class="bar-dark">
