--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
 <!--    <script src="lib/ionic/js/ionic.bundle.min.js"></script>-->
 
     <!--Angular stuff-->
-    <script src="lib/angular-sanitize/angular-sanitize.js"></script>
+    <script src="lib/angular-sanitize/angular-sanitize.min.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
@@ -29,8 +29,8 @@
     <!--    Restangular Stuff-->
     <script src="modules/dbServices.js"></script>
     <script src="modules/sha512.js"></script>
-    <script src="lib/lodash/dist/lodash.js"></script>
-    <script src="lib/restangular/dist/restangular.js"></script>
+    <script src="lib/lodash/dist/lodash.underscore.min.js"></script>
+    <script src="lib/restangular/dist/restangular.min.js"></script>
 
     <!--Google Maps-->
     <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyDb6dcBwQGLa1gjxKh0ki1W1qMtcZYsCGA" type="text/javascript"></script>
