--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
-    <!--<script src="js/filters.js"></script>-->
+    <script src="js/filters.js"></script>
     
     <!--Restangular Stuff-->
     <script src="modules/dbServices.js"></script>
