--- a/www/index.html
+++ b/www/index.html
@@ -45,11 +45,11 @@
     <ion-side-menus delegate-handle="main-menu">
         <ion-side-menu-content drag-content="true">
             <ion-nav-bar class="bar-dark">
-                <button ng-hide="$exposeAside.active" class="button button-icon button-clear ion-navicon" ng-click="menuToggle()"></button>
+                <button class="button button-icon button-clear ion-navicon" ng-click="menuToggle()"></button>
             </ion-nav-bar>
             <ion-nav-view name="content"></ion-nav-view>
         </ion-side-menu-content>
-        <ion-side-menu side="left" expose-aside-when="large">
+        <ion-side-menu side="left">
             <ion-nav-bar class="bar-dark"></ion-nav-bar>
             <ion-nav-view animation="slide-left-right" name="menu"></ion-nav-view>
         </ion-side-menu>
