Got the map in, we will need to structure the data loading differently to feed the markers correctly into the map.
Moved the $timeout for menu open into the controller

--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
     <title>University of Houston Public Art App</title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="css/active_style.css" rel="stylesheet">
     <!--<link href="css/style.css" rel="stylesheet">-->
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -32,8 +33,9 @@
     <script src="lib/lodash/dist/lodash.underscore.min.js"></script>
     <script src="lib/restangular/dist/restangular.min.js"></script>
 
-    <!--Google Maps-->
+    <!--Google Maps + Adaptive GoogleMaps-->
     <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyDb6dcBwQGLa1gjxKh0ki1W1qMtcZYsCGA" type="text/javascript"></script>
+    <script type="text/javascript" src="lib/angular-adaptive-googlemaps/angular-adaptive-googlemaps.min.js"></script>
 </head>
 
 <body ng-app="publicArtApp" ng-controller="menuCtrl">
