Add map module so it will work on compile APK of the app without a GMaps JS v3 key (same as VMA operates).

--- a/www/index.html
+++ b/www/index.html
@@ -34,8 +34,8 @@
     <script src="lib/restangular/dist/restangular.min.js"></script>
 
     <!--Google Maps + Adaptive GoogleMaps-->
-    <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyDb6dcBwQGLa1gjxKh0ki1W1qMtcZYsCGA" type="text/javascript"></script>
-    <script type="text/javascript" src="lib/angular-adaptive-googlemaps/angular-adaptive-googlemaps.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script>
+    <script src="modules/map/angular-adaptive-googlemaps.js"></script>
 </head>
 
 <body ng-app="publicArtApp" ng-controller="menuCtrl">
