Finished up faves.
Cleanup.

--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
     <script src="js/filters.js"></script>
+    <script src="js/native.js"></script>
     
     <!--Restangular Stuff-->
     <script src="modules/dbServices.js"></script>
