--- a/www/index.html
+++ b/www/index.html
@@ -48,6 +48,9 @@
         <ion-side-menu-content drag-content="true">
             <ion-nav-bar class="bar-dark">
                 <button class="button button-icon button-clear ion-navicon" ng-click="menuToggle()"></button>
+                <ion-nav-back-button class="button-clear">
+                    <i class="ion-arrow-return-left"></i> Back
+                </ion-nav-back-button>
             </ion-nav-bar>
             <ion-nav-view name="content"></ion-nav-view>
         </ion-side-menu-content>
