--- a/www/index.html
+++ b/www/index.html
@@ -8,18 +8,11 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/active_style.css" rel="stylesheet">
-    <!--<link href="css/style.css" rel="stylesheet">-->
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
-
-    <!--IntelXDK AR stuff: COMMENT OUT IF YOU ARE GETTING ERRORS IN LIVEPREVIEW-->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <!--<script src="lib/ionic/js/ionic.bundle.min.js"></script>-->
-
-    <!--Angular stuff-->
-    <script src="lib/angular-sanitize/angular-sanitize.min.js"></script>
+    <script src="lib/ionic/js/ionic.bundle.min.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
