Reduced menu width.

--- a/www/index.html
+++ b/www/index.html
@@ -48,8 +48,7 @@
             </ion-nav-bar>
             <ion-nav-view name="content"></ion-nav-view>
         </ion-side-menu-content>
-        <ion-side-menu side="left">
-            <ion-nav-bar class="bar-dark"></ion-nav-bar>
+        <ion-side-menu side="left" width="200">
             <ion-nav-view animation="slide-left-right" name="menu"></ion-nav-view>
         </ion-side-menu>
     </ion-side-menus>
