Added custom NGN for server internet unavailability.

--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/active_style.css" rel="stylesheet">
+    <link href="dist/ng-notify/src/styles/ng-notify.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -26,6 +27,9 @@
     <script src="modules/sha512.js"></script>
     <script src="lib/lodash/dist/lodash.underscore.min.js"></script>
     <script src="lib/restangular/dist/restangular.min.js"></script>
+    
+    <!-- ngNotify -->
+    <script src="dist/ng-notify/src/scripts/ng-notify.js"></script>
 
     <!--Google Maps + Adaptive GoogleMaps-->
     <script src="https://maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script>
