--- a/www/index.html
+++ b/www/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>University of Houston Public Art App</title>
 
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="dist/ionic/css/ionic.min.css" rel="stylesheet">
     <link href="css/active_style.css" rel="stylesheet">
     <link href="dist/ng-notify/src/styles/ng-notify.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
-    <script src="lib/ionic/js/ionic.bundle.min.js"></script>
+    <script src="dist/ionic/js/ionic.bundle.min.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
@@ -25,8 +25,8 @@
     <!--Restangular Stuff-->
     <script src="modules/dbServices.js"></script>
     <script src="modules/sha512.js"></script>
-    <script src="lib/lodash/dist/lodash.underscore.min.js"></script>
-    <script src="lib/restangular/dist/restangular.min.js"></script>
+    <script src="dist/lodash/dist/lodash.underscore.min.js"></script>
+    <script src="dist/restangular/dist/restangular.min.js"></script>
     
     <!-- ngNotify -->
     <script src="dist/ng-notify/src/scripts/ng-notify.js"></script>
