--- a/www/index.html
+++ b/www/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>University of Houston Public Art App</title>
 
+    <link href="fonts/MiloOTLight.css" rel="stylesheet">
     <link href="dist/ionic/css/ionic.min.css" rel="stylesheet">
     <link href="css/active_style.css" rel="stylesheet">
     <link href="dist/ng-notify/src/styles/ng-notify.css" rel="stylesheet">
+    
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
+    <!-- compiled css output -->
+    <link href="css/ionic.app.min.css" rel="stylesheet">
     <script src="dist/ionic/js/ionic.bundle.min.js"></script>
 
     <script src="js/app.js"></script>
@@ -56,5 +57,9 @@
             <ion-nav-view animation="slide-left-right" name="menu"></ion-nav-view>
         </ion-side-menu>
     </ion-side-menus>
+    <ion-footer-bar align-title="right" class="bar-dark">
+        <button class="button button-icon button-clear ion-navicon" ng-click="aboutToggle()"></button>
+        <img style="height: 100%; width: auto" class="center-img" src="img/uh-primary-white.png"/>
+    </ion-footer-bar>
 </body>
 </html>
