--- a/www/ar_world/index.html
+++ b/www/ar_world/index.html
@@ -117,9 +117,15 @@
                 <!-- the radar div - Wikitude SDK radar will be drawn into this div -->
                 <div class="radarContainer_left" id="radarContainer"></div>
             </div>
+            
             <div style="position: absolute; left: 0px; bottom: 100px; background: none; display: visible" id="div-poi-detail-distance">
                 <a style="padding: 5px; background:#444444; color:#FFFFFF" id="poi-detail-distance" data-inline="true" data-transition="pop">DISTANCE</a>
             </div>
+<!--
+            <a href="architectsdk://button?action=captureScreen" style="position: absolute; right: 5px; bottom: 5px; background: none; display: visible">
+                <img height="40px" src="assets/camera.svg"/>
+            </a>
+-->
         
             <!-- POPUPS, ONLY VISIBLE ON DEMAND -->
 
