Added icon/splash. Fix some collage spcing.

--- a/www/index.html
+++ b/www/index.html
@@ -48,7 +48,7 @@
     <ion-nav-bar class="bar-dark">
         <button class="button button-icon button-clear ion-navicon" ng-click="menuToggle()"></button>
         <ion-nav-back-button class="button-clear">
-            <i class="ion-arrow-return-left"></i> Back
+            <i class="ion-arrow-return-left"></i>
         </ion-nav-back-button>
     </ion-nav-bar>
     <ion-side-menus delegate-handle="main-menu">
