--- a/www/index.html
+++ b/www/index.html
@@ -46,10 +46,8 @@
     <script type="text/javascript" src="ar_js/index.js"></script>
     
     <ion-nav-bar class="bar-dark">
+        <ion-nav-back-button class="button-icon ion-ios7-arrow-back"></ion-nav-back-button>
         <button class="button button-icon button-clear ion-navicon" ng-click="menuToggle()"></button>
-        <ion-nav-back-button class="button-clear">
-            <i class="ion-arrow-return-left"></i>
-        </ion-nav-back-button>
     </ion-nav-bar>
     <ion-side-menus delegate-handle="main-menu">
         <ion-side-menu-content drag-content="true">
