-Added fallback for image caching. -Added imagecache directive to artwork detail. -Added more icons in headers -Removed conflicting map icons -Removed gradient from button in AR and made it bigger.

--- a/www/ar_world/index.html
+++ b/www/ar_world/index.html
@@ -74,11 +74,6 @@
         }
         #art-title {
             background: #C8102E;
-            background-image: -webkit-linear-gradient(top, #C8102E, #960C22);
-            background-image: -moz-linear-gradient(top, #C8102E, #960C22);
-            background-image: -ms-linear-gradient(top, #C8102E, #960C22);
-            background-image: -o-linear-gradient(top, #C8102E, #960C22);
-            background-image: linear-gradient(to bottom, #C8102E, #960C22);
             -webkit-border-radius: 15;
             -moz-border-radius: 15;
             border-radius: 15px;
@@ -90,11 +85,6 @@
 
         #art-title:hover {
             background: #960C22;
-            background-image: -webkit-linear-gradient(top, #960C22, #C8102E);
-            background-image: -moz-linear-gradient(top, #960C22, #C8102E);
-            background-image: -ms-linear-gradient(top, #960C22, #C8102E);
-            background-image: -o-linear-gradient(top, #960C22, #C8102E);
-            background-image: linear-gradient(to bottom, #960C22, #C8102E);
             text-decoration: none;
         }
     </style>
@@ -110,7 +100,7 @@
             </div>
             
             <div id="div-art-title">
-                <a href="javascript: World.showInfo();" id="art-title" data-role="button" data-mini="true" class="ui-icon-alt" data-inline="true" data-transition="pop" data-theme="b">More Info</a>
+                <a href="javascript: World.showInfo();" id="art-title" data-role="button" class="ui-icon-alt" data-inline="true" data-transition="pop" data-theme="b">More Info</a>
             </div>
 
             <!-- transparent footer-->
