--- a/www/index.html
+++ b/www/index.html
@@ -17,9 +17,9 @@
     <link href="css/ionic.app.min.css" rel="stylesheet">
     <script src="dist/ionic/js/ionic.bundle.min.js"></script>
     
-    <!-- cache -->
-    <script src="dist/imgcache.js"></script>
-    <script src="dist/angular-imgcache.js"></script>
+    <!-- img-cache -->
+    <script src="dist/imgcache/imgcache.js"></script>
+    <script src="dist/imgcache/angular-imgcache.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 
     <script src="js/app.js"></script>
