Fixed part of the error.

--- a/www/ar_world/index.html
+++ b/www/ar_world/index.html
@@ -140,7 +140,7 @@
 -->
 
             <div id="div-tour-title">
-                <a href="javascript: World.showInfo();" id="tour-title" data-role="button" data-mini="true" class="ui-icon-alt" data-inline="true" data-transition="pop" data-theme="b">Tour Name</a>
+                <a href="javascript: World.showTourInfo();" id="tour-title" data-role="button" data-mini="true" class="ui-icon-alt" data-inline="true" data-transition="pop" data-theme="b">Tour Name</a>
             </div>
         
             <!-- POPUPS, ONLY VISIBLE ON DEMAND -->
