--- a/www/index.html
+++ b/www/index.html
@@ -46,7 +46,7 @@
     <script type="text/javascript" src="cordova.js"></script>
 </head>
 
-<body ng-app="publicArtApp" ng-controller="menuCtrl">
+<body ng-app="publicArtApp">
     <script type="text/javascript" src="ar_js/sampleIndices.js"></script>
     <script type="text/javascript" src="ar_js/loadingPoisFromApplicationModel.js"></script>
     <script type="text/javascript" src="ar_js/index.js"></script>
