--- a/www/ar_world/index.html
+++ b/www/ar_world/index.html
@@ -31,14 +31,14 @@
     <!-- radar component -->
     <script type="text/javascript" src="js/radar.js"></script>
     <script>
-        $(document).ready(function() {
-            // If closeForever LS entry has not been created
-            if(!localStorage.getItem("closeForever")){
-                $("#popupDialog").popup("open");
-            } else {
-                $("#popupLoading").popup("open");
-            }
-        });
+//        $(document).ready(function() {
+//            // If closeForever LS entry has not been created
+//            if(!localStorage.getItem("closeForever")){
+//                $("#popupDialog").popup("open");
+//            } else {
+//                $("#popupLoading").popup("open");
+//            }
+//        });
 
         function closeWikitudePlugin() {
             document.location = 'architectsdk://action=closeWikitudePlugin';
