--- a/www/index.html
+++ b/www/index.html
@@ -65,7 +65,7 @@
     </ion-side-menus>
     <ion-footer-bar align-title="right" class="bar-dark">
         <button class="button button-icon button-clear ion-ios-information" ui-sref="tour.about"></button>
-        <img style="height: 100%; width: auto" class="center-img" src="img/uh-primary-white.png"/>
+        <img style="height: 100%; width: auto" class="center-img" src="img/public-art-collection-secondary-white.png"/>
     </ion-footer-bar>
 </body>
 </html>
