Just added a bottom margin to the signal button. It was bugging me.

--- a/www/ar_world/index.html
+++ b/www/ar_world/index.html
@@ -121,6 +121,9 @@
             -webkit-border-radius: 0px;
             border-radius: 0px;
         }
+        #popupInfoButton {
+            margin-bottom: 10px;
+        }
     </style>
 </head>
     <body>
