Fixed signal error message.

--- a/www/ar_world/index.html
+++ b/www/ar_world/index.html
@@ -143,10 +143,10 @@
             <!-- transparent footer-->
             <div data-role="footer" class="ui-bar" data-theme="f" data-position="fixed" style="text-align:center;">
                 <!-- small status-button -->
-                <a style="text-align:right;" id="popupInfoButton" href="#popupInfo" data-rel="popup" data-role="button" class="ui-icon-nodisc" data-inline="true" data-transition="pop" data-icon="signal-bars-4" data-theme="e" data-iconpos="notext">Log</a>
+                <a style="text-align:right;" id="popupInfoButton" href="#popupInfo" data-rel="popup" data-role="button" class="ui-icon-nodisc ui-icon-alt" data-inline="true" data-transition="pop" data-icon="alert" data-theme="e" data-iconpos="notext">Log</a>
                 <!-- popup displayed when button clicked -->
                 <div data-role="popup" id="popupInfo" class="ui-content" data-theme="e" style="max-width:350px;">
-                  <p style="text-align:right;" id="status-message">GPS Signal: Strong</p>
+                  <p style="text-align:right;" id="status-message">Locating... Please Wait</p>
                 </div>
                 <!-- the radar div - Wikitude SDK radar will be drawn into this div -->
                 <div class="radarContainer_left" id="radarContainer"></div>
