--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@
 <body ng-app="publicArtApp">
     <ion-nav-bar class="bar-dark">
         <ion-nav-back-button class="button-icon ion-ios7-arrow-back"></ion-nav-back-button>
-        <button class="button button-icon button-clear ion-navicon" ng-click="menuToggle()"></button>
+        <button class="button button-icon button-clear ion-navicon" ng-click="menuToggle()" ng-hide="curState=='tour.error'"></button>
     </ion-nav-bar>
     <ion-side-menus delegate-handle="main-menu">
         <ion-side-menu-content drag-content="true">
@@ -64,7 +64,7 @@
         </ion-side-menu>
     </ion-side-menus>
     <ion-footer-bar align-title="right" class="bar-dark">
-        <button class="button button-icon button-clear ion-ios-information" ui-sref="tour.about"></button>
+        <button class="button button-icon button-clear ion-ios-information" ui-sref="tour.about" ng-hide="curState=='tour.error'"></button>
         <img style="height: 100%; width: auto" class="center-img" src="img/public-art-collection-secondary-white.png"/>
     </ion-footer-bar>
 </body>
