Added links to Art Detail. Links now open in new tab. Still doesn't work on iOS. Concerns issue #16

--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,10 @@
     <script src="modules/sha512.js"></script>
     <script src="dist/lodash/dist/lodash.underscore.min.js"></script>
     <script src="dist/restangular/dist/restangular.min.js"></script>
+    
+    <!--ngCordova-->
+    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova-mocks.min.js"></script>
 
     <!-- ngNotify -->
     <script src="dist/ng-notify/src/scripts/ng-notify.js"></script>
