--- a/www/index.html
+++ b/www/index.html
@@ -52,7 +52,7 @@
 
 <body ng-app="publicArtApp">
     <ion-nav-bar class="bar-dark">
-        <ion-nav-back-button class="button-icon ion-ios7-arrow-back"></ion-nav-back-button>
+        <ion-nav-back-button class="button-icon ion-ios-arrow-back"></ion-nav-back-button>
         <button class="button button-icon button-clear ion-navicon" ng-click="menuToggle()" ng-hide="curState=='tour.error'"></button>
     </ion-nav-bar>
     <ion-side-menus delegate-handle="main-menu">
