--- a/www/index.html
+++ b/www/index.html
@@ -63,7 +63,7 @@
         <ion-side-menu-content drag-content="true">
             <ion-nav-view name="content"></ion-nav-view>
         </ion-side-menu-content>
-        <ion-side-menu side="left" width="200" ng-hide="curState=='tour.intro'">
+        <ion-side-menu side="left" width="200">
             <ion-nav-view animation="slide-left-right" name="menu"></ion-nav-view>
         </ion-side-menu>
     </ion-side-menus>
